correct new-tweet class alignment

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,8 +12,7 @@
 }
 
 .new-tweet textarea {
-  display: flex;
-  justify-content: center;
+  align-items: center;
   border: none;
   width: 700px;
   height: 100px;
